# secprog-authz

./: .editorconfig  .gitignore  Cargo.toml  biome.json  build.ts  package.json  playwright.config.ts  tsconfig.json
doc/: report.typ  slides.typ  sources.bib
src/: application.rs  crypto.rs  extract.rs  handler.rs  main.rs  reply.rs  runtime.rs  server.rs  storage.rs  token.rs  worker.rs
test/: authenticate.ts
web/: index.ts  index.tsx  state.ts  view.tsx
