[package]
name = "secprog-authz"
version = "0.0.0"
edition = "2024"
license = "EUPL-1.2"
publish = false

[dependencies]
anyhow = "1"
arrayvec = "0.7"
futures-util = "0.3"
http-body-util = "0.1"
rusqlite = "0.38"

argon2 = "0.5"
base64ct = "1"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"

serde = "1"
serde_derive = "1"
serde_json = "1"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[dependencies.hyper]
version = "1"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1"
features = ["tokio"]

[dependencies.secrecy]
version = "0.10"
features = ["serde"]

[dependencies.tokio]
version = "1"
features = ["net", "signal"]

[dependencies.tokio-util]
version = "0.7"
features = ["rt"]

[lints.clippy]
all = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_conversions = "warn"
clone_on_ref_ptr = "warn"
if_then_some_else_none = "warn"
missing_asserts_for_indexing = "warn"
module_name_repetitions = "warn"
multiple_unsafe_ops_per_block = "warn"
nursery = "warn"
partial_pub_fields = "warn"
pedantic = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
single_char_lifetime_names = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

[lints.clippy.future_not_send]
level = "allow"
priority = 1

[lints.clippy.missing_errors_doc]
level = "allow"
priority = 1

[lints.clippy.missing_panics_doc]
level = "allow"
priority = 1

[lints.rust.async_fn_in_trait]
level = "allow"
priority = 1
